--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: python
-python: "3.5"
-script: export PYTHONPATH=./src && pytest --cov=src
+python:
+  - "3.5"
+  - "nightly"
+script:
+  - export PYTHONPATH=./src
+  - pytest --cov=src
+after_success:
+  - coveralls
